LPS-141833 Added priority to Blog in headless-delivery API

--- a/modules/apps/headless/headless-delivery/headless-delivery-impl/rest-openapi.yaml
+++ b/modules/apps/headless/headless-delivery/headless-delivery-impl/rest-openapi.yaml
@@ -159,6 +159,12 @@ components:
                         The number of comments this blog post has received.
                     readOnly: true
                     type: integer
+                priority:
+                    # @review
+                    description:
+                        The blog post's priority.
+                    format: double
+                    type: number
                 relatedContents:
                     # @review
                     description:
