COMMERCE-8196 new labels

--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language.properties
@@ -3499,6 +3499,7 @@ configure-x=Configure {0}
 configured-database=Configured Database
 configures-whether-a-guest-may-checkout-by-providing-an-email-address-or-if-they-must-sign-in=Configures whether a guest may checkout by providing an email address or if they must sign in.
 configures-whether-an-order-requested-delivery-date-can-be-set-during-checkout=Configures whether an order requested delivery date can be set during checkout.
+configures-whether-the-delivery-terms-checkout-step-is-shown-during-checkout=Configures whether the delivery terms checkout step is shown during checkout.
 configures-whether-the-payment-terms-checkout-step-is-shown-during-checkout=Configures whether the payment terms checkout step is shown during checkout.
 configures-whether-the-purchase-order-number-is-shown-or-hidden-in-placed-and-pending-order-details=Configures whether the purchase order number is shown or hidden in placed and pending order details.
 confirm=Confirm
@@ -15390,6 +15391,7 @@ there-are-no-assigned-items-overdue-at-the-moment=There are no assigned items ov
 there-are-no-attachments=There are no attachments.
 there-are-no-availability-estimates=There are no availability estimates.
 there-are-no-available-advanced-settings-for-these-pages=There are no available advanced settings for these pages.
+there-are-no-available-delivery-terms=There are no available delivery terms.
 there-are-no-available-items-to-ship-in-the-selected-order=There are no available items to ship in the selected order.
 there-are-no-available-nodes-for-selection=There are no available nodes for selection.
 there-are-no-available-payment-methods=There are no available payment methods.
@@ -16897,6 +16899,8 @@ view-current-fields-warning-message=This display always reflects the form's curr
 view-customizable-zones=View Customizable Zones
 view-data=View data
 view-data-in-analytics-cloud=View Data in Analytics Cloud
+view-delivery-term-checkout-step=View Delivery Terms Checkout Step
+view-delivery-term-checkout-step-enabled=View Delivery Terms Checkout Step Enabled
 view-details=View Details
 view-diff=View Diff
 view-display-page=View Display Page
