LPS-147108 Add language keys

--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language.properties
@@ -12406,6 +12406,7 @@ request-courier=Request Courier
 request-details=Request Details
 request-details-full=Request Details Full
 request-details-minimal=Request Details Minimal
+request-files=Request Files
 request-header-auto-login-configuration-name=Auto Login Request Header
 request-holiday=Request Holiday
 request-is-larger-than-x-and-could-not-be-processed=Request is larger than {0} and could not be processed.
@@ -14863,6 +14864,7 @@ the-file-was-processed-correctly=The file was processed correctly.
 the-file-x-cannot-be-imported=The file <em>{0}</em> cannot be imported.
 the-file-x-cannot-be-inspected=The file {0} cannot be inspected.
 the-file-x-cannot-be-saved=The file <em>{0}</em> cannot be saved.
+the-files-can-be-stored-in-a-object-entry-or-in-a-specific-folder-from-documents-and-media=The files can be stored in a object entry or in a specific folder from Documents and Media.
 the-files-were-imported-correctly=The files were imported correctly.
 the-firm-cannot-be-deleted-because-it-has-associated-projects=The firm cannot be deleted because it has associated projects.
 the-firm-could-not-be-found=The firm could not be found.
@@ -16509,6 +16511,7 @@ upload-another-file=Upload Another File
 upload-certificate=Upload Certificate
 upload-completed=Upload Completed
 upload-definition=Upload Definition
+upload-directly-from-users-computer=Upload Directly from the User's Computer Computer
 upload-document=Upload Document
 upload-documents-no-larger-than-3000-k=Upload documents no larger than 3,000k.
 upload-documents-no-larger-than-x=Upload documents no larger than {0}.
