--- a/modules/modules.properties
+++ b/modules/modules.properties
@@ -368,7 +368,7 @@ bundle.version[com.liferay.asset.web]=6.0.10
 bundle.version[com.liferay.batch.engine.api]=15.0.1
 bundle.version[com.liferay.batch.engine.service]=4.0.25
 bundle.version[com.liferay.batch.engine.test]=1.0.0
-bundle.version[com.liferay.batch.planner.api]=7.0.1
+bundle.version[com.liferay.batch.planner.api]=7.1.0
 bundle.version[com.liferay.batch.planner.rest.api]=2.2.1
 bundle.version[com.liferay.batch.planner.rest.client]=1.0.8
 bundle.version[com.liferay.batch.planner.rest.impl]=1.0.10
@@ -533,7 +533,7 @@ bundle.version[com.liferay.commerce.payment.service]=4.0.22
 bundle.version[com.liferay.commerce.payment.test.util]=4.0.5
 bundle.version[com.liferay.commerce.payment.test]=1.0.0
 bundle.version[com.liferay.commerce.payment.web]=4.0.19
-bundle.version[com.liferay.commerce.price.list.api]=13.0.1
+bundle.version[com.liferay.commerce.price.list.api]=14.0.0
 bundle.version[com.liferay.commerce.price.list.service]=4.0.21
 bundle.version[com.liferay.commerce.price.list.test]=1.0.0
 bundle.version[com.liferay.commerce.pricing.api]=12.0.1
@@ -587,7 +587,7 @@ bundle.version[com.liferay.commerce.service]=11.0.57
 bundle.version[com.liferay.commerce.shipment.content.web]=4.0.13
 bundle.version[com.liferay.commerce.shipment.web]=4.0.18
 bundle.version[com.liferay.commerce.shipping.engine.fedex]=5.0.14
-bundle.version[com.liferay.commerce.shipping.engine.fixed.api]=9.1.1
+bundle.version[com.liferay.commerce.shipping.engine.fixed.api]=10.0.0
 bundle.version[com.liferay.commerce.shipping.engine.fixed.service]=4.0.18
 bundle.version[com.liferay.commerce.shipping.engine.fixed.test]=1.0.0
 bundle.version[com.liferay.commerce.shipping.engine.fixed.web]=4.0.19
@@ -682,7 +682,7 @@ bundle.version[com.liferay.digital.signature.rest.test]=1.0.0
 bundle.version[com.liferay.digital.signature.test]=1.0.0
 bundle.version[com.liferay.digital.signature.web]=1.0.19
 bundle.version[com.liferay.directory.web]=5.0.15
-bundle.version[com.liferay.dispatch.api]=10.0.1
+bundle.version[com.liferay.dispatch.api]=10.1.0
 bundle.version[com.liferay.dispatch.executor.sample]=1.0.11
 bundle.version[com.liferay.dispatch.service]=3.0.18
 bundle.version[com.liferay.dispatch.talend.api]=1.1.7
@@ -762,7 +762,7 @@ bundle.version[com.liferay.dynamic.data.mapping.form.analytics]=5.0.6
 bundle.version[com.liferay.dynamic.data.mapping.form.builder]=4.0.28
 bundle.version[com.liferay.dynamic.data.mapping.form.evaluator.impl]=4.0.35
 bundle.version[com.liferay.dynamic.data.mapping.form.field.type.api]=1.5.1
-bundle.version[com.liferay.dynamic.data.mapping.form.field.type]=6.0.78
+bundle.version[com.liferay.dynamic.data.mapping.form.field.type]=6.0.79
 bundle.version[com.liferay.dynamic.data.mapping.form.item.selector.api]=2.0.1
 bundle.version[com.liferay.dynamic.data.mapping.form.renderer]=6.0.32
 bundle.version[com.liferay.dynamic.data.mapping.form.taglib]=4.0.15
@@ -1035,7 +1035,7 @@ bundle.version[com.liferay.image.api]=1.0.5
 bundle.version[com.liferay.image.impl]=1.0.8
 bundle.version[com.liferay.image.uploader.web]=5.0.17
 bundle.version[com.liferay.imageio.plugins]=5.0.6
-bundle.version[com.liferay.info.api]=11.0.2
+bundle.version[com.liferay.info.api]=11.1.0
 bundle.version[com.liferay.info.collection.provider.item.selector.api]=1.0.6
 bundle.version[com.liferay.info.collection.provider.item.selector.web]=1.0.17
 bundle.version[com.liferay.info.impl]=5.0.15
@@ -1059,7 +1059,7 @@ bundle.version[com.liferay.item.selector.url.web]=6.0.16
 bundle.version[com.liferay.item.selector.web]=7.0.15
 bundle.version[com.liferay.javadoc.formatter]=1.0.37
 bundle.version[com.liferay.jaxws.osgi.bridge]=5.0.4
-bundle.version[com.liferay.jenkins.results.parser]=1.0.1002
+bundle.version[com.liferay.jenkins.results.parser]=1.0.1005
 bundle.version[com.liferay.journal.api]=10.0.2
 bundle.version[com.liferay.journal.article.dynamic.data.mapping.form.field.type.api]=1.0.6
 bundle.version[com.liferay.journal.article.dynamic.data.mapping.form.field.type]=2.0.17
@@ -1103,7 +1103,7 @@ bundle.version[com.liferay.lang.builder]=1.0.47
 bundle.version[com.liferay.layout.admin.api]=4.0.5
 bundle.version[com.liferay.layout.admin.web.test]=1.0.0
 bundle.version[com.liferay.layout.admin.web]=5.0.60
-bundle.version[com.liferay.layout.api]=12.0.1
+bundle.version[com.liferay.layout.api]=12.1.0
 bundle.version[com.liferay.layout.content.page.editor.api]=4.0.1
 bundle.version[com.liferay.layout.content.page.editor.impl]=2.0.6
 bundle.version[com.liferay.layout.content.page.editor.web.test]=1.0.0
@@ -1238,11 +1238,11 @@ bundle.version[com.liferay.notifications.uad.test]=1.0.0
 bundle.version[com.liferay.notifications.uad]=6.0.11
 bundle.version[com.liferay.notifications.web.test]=1.0.0
 bundle.version[com.liferay.notifications.web]=5.0.20
-bundle.version[com.liferay.oauth.api]=7.0.1
+bundle.version[com.liferay.oauth.api]=7.1.0
 bundle.version[com.liferay.oauth.service]=5.0.15
 bundle.version[com.liferay.oauth.test]=1.0.0
 bundle.version[com.liferay.oauth.web]=5.0.20
-bundle.version[com.liferay.oauth2.provider.api]=6.0.1
+bundle.version[com.liferay.oauth2.provider.api]=6.1.0
 bundle.version[com.liferay.oauth2.provider.jsonws]=4.0.14
 bundle.version[com.liferay.oauth2.provider.rest.spi]=4.0.5
 bundle.version[com.liferay.oauth2.provider.rest]=4.0.16
@@ -1255,11 +1255,11 @@ bundle.version[com.liferay.oauth2.provider.service]=4.0.18
 bundle.version[com.liferay.oauth2.provider.shortcut]=4.0.11
 bundle.version[com.liferay.oauth2.provider.test]=1.0.0
 bundle.version[com.liferay.oauth2.provider.web]=4.0.24
-bundle.version[com.liferay.object.admin.rest.api]=4.5.1
+bundle.version[com.liferay.object.admin.rest.api]=4.6.0
 bundle.version[com.liferay.object.admin.rest.client]=1.0.14
 bundle.version[com.liferay.object.admin.rest.impl]=1.0.22
 bundle.version[com.liferay.object.admin.rest.test]=1.0.0
-bundle.version[com.liferay.object.api]=11.1.1
+bundle.version[com.liferay.object.api]=12.0.0
 bundle.version[com.liferay.object.dynamic.data.mapping.form.field.type.api]=1.0.2
 bundle.version[com.liferay.object.dynamic.data.mapping.form.field.type]=1.0.2
 bundle.version[com.liferay.object.dynamic.data.mapping]=1.0.12
@@ -1267,7 +1267,7 @@ bundle.version[com.liferay.object.rest.api]=3.0.1
 bundle.version[com.liferay.object.rest.impl]=1.0.21
 bundle.version[com.liferay.object.service]=1.0.39
 bundle.version[com.liferay.object.test]=1.0.0
-bundle.version[com.liferay.object.web]=1.0.45
+bundle.version[com.liferay.object.web]=1.0.46
 bundle.version[com.liferay.on.demand.admin.api]=1.0.0
 bundle.version[com.liferay.on.demand.admin.impl]=1.0.0
 bundle.version[com.liferay.on.demand.admin.test]=1.0.0
@@ -1300,6 +1300,7 @@ bundle.version[com.liferay.petra.doulos]=7.0.8
 bundle.version[com.liferay.petra.encryptor]=5.0.5
 bundle.version[com.liferay.petra.executor]=5.0.4
 bundle.version[com.liferay.petra.function]=5.1.3
+bundle.version[com.liferay.petra.http.invoker]=1.0.1
 bundle.version[com.liferay.petra.io.delta]=5.0.5
 bundle.version[com.liferay.petra.io]=5.0.5
 bundle.version[com.liferay.petra.json.validator]=6.0.3
@@ -1317,7 +1318,7 @@ bundle.version[com.liferay.petra.reflect]=5.1.3
 bundle.version[com.liferay.petra.salesforce.client]=5.0.7
 bundle.version[com.liferay.petra.sql.dsl.api]=2.2.3
 bundle.version[com.liferay.petra.sql.dsl.spi]=2.0.7
-bundle.version[com.liferay.petra.string]=5.0.5
+bundle.version[com.liferay.petra.string]=5.1.0
 bundle.version[com.liferay.petra.test.util]=3.0.3
 bundle.version[com.liferay.petra.url.pattern.mapper]=4.0.5
 bundle.version[com.liferay.petra.xml]=5.0.5
@@ -1400,7 +1401,7 @@ bundle.version[com.liferay.portal.file.install.impl]=4.0.17
 bundle.version[com.liferay.portal.file.install.test]=1.0.0
 bundle.version[com.liferay.portal.fragment.bundle.watcher.test]=1.0.0
 bundle.version[com.liferay.portal.fragment.bundle.watcher]=4.0.9
-bundle.version[com.liferay.portal.impl]=25.0.2
+bundle.version[com.liferay.portal.impl]=26.0.1
 bundle.version[com.liferay.portal.inactive.request.handler]=4.0.12
 bundle.version[com.liferay.portal.init.servlet.filter]=6.0.8
 bundle.version[com.liferay.portal.instance.lifecycle.api]=4.0.5
@@ -1412,7 +1413,7 @@ bundle.version[com.liferay.portal.jmx.api]=5.0.5
 bundle.version[com.liferay.portal.jmx.test]=1.0.0
 bundle.version[com.liferay.portal.jmx]=8.0.8
 bundle.version[com.liferay.portal.jsp.engine]=1.0.6
-bundle.version[com.liferay.portal.kernel]=37.0.1
+bundle.version[com.liferay.portal.kernel]=38.0.1
 bundle.version[com.liferay.portal.language.extender]=6.0.13
 bundle.version[com.liferay.portal.language.lang]=1.0.76
 bundle.version[com.liferay.portal.language.override.api]=2.0.1
@@ -1630,6 +1631,8 @@ bundle.version[com.liferay.portal.template.soy.renderer.impl]=3.0.8
 bundle.version[com.liferay.portal.template.test]=1.0.0
 bundle.version[com.liferay.portal.template.velocity]=6.0.19
 bundle.version[com.liferay.portal.test]=11.1.1
+bundle.version[com.liferay.portal.tika.test]=1.0.0
+bundle.version[com.liferay.portal.tika]=1.0.0
 bundle.version[com.liferay.portal.tools.bundle.support]=3.7.4
 bundle.version[com.liferay.portal.tools.data.partitioning.sql.builder.mysql]=3.0.0
 bundle.version[com.liferay.portal.tools.data.partitioning.sql.builder.postgresql]=3.0.0
@@ -1639,7 +1642,7 @@ bundle.version[com.liferay.portal.tools.db.support]=1.0.9
 bundle.version[com.liferay.portal.tools.db.upgrade.client]=4.0.0
 bundle.version[com.liferay.portal.tools.java.parser]=1.0.47
 bundle.version[com.liferay.portal.tools.portal.compat.bytecode.transformer]=1.0.4
-bundle.version[com.liferay.portal.tools.rest.builder]=1.0.226
+bundle.version[com.liferay.portal.tools.rest.builder]=1.0.227
 bundle.version[com.liferay.portal.tools.sample.sql.builder]=3.0.0
 bundle.version[com.liferay.portal.tools.service.builder.test.api]=1.0.0
 bundle.version[com.liferay.portal.tools.service.builder.test.service]=1.0.0
@@ -1653,7 +1656,7 @@ bundle.version[com.liferay.portal.tools.wsdd.builder]=1.0.12
 bundle.version[com.liferay.portal.transaction.test]=1.0.0
 bundle.version[com.liferay.portal.uad.test]=1.0.0
 bundle.version[com.liferay.portal.uad]=6.0.11
-bundle.version[com.liferay.portal.upgrade.api]=5.1.1
+bundle.version[com.liferay.portal.upgrade.api]=6.0.0
 bundle.version[com.liferay.portal.upgrade.impl]=5.0.22
 bundle.version[com.liferay.portal.upgrade.test]=1.0.0
 bundle.version[com.liferay.portal.upload.servlet.request.filter]=2.0.7
@@ -1735,9 +1738,9 @@ bundle.version[com.liferay.portlet.preferences.test]=1.0.0
 bundle.version[com.liferay.portlet.tck.bridge]=4.0.1
 bundle.version[com.liferay.portlet.test]=1.0.0
 bundle.version[com.liferay.portlet.title.localization.test]=1.0.0
-bundle.version[com.liferay.poshi.core]=1.0.51
+bundle.version[com.liferay.poshi.core]=1.0.52
 bundle.version[com.liferay.poshi.runner.resources]=1.0.12
-bundle.version[com.liferay.poshi.runner]=1.0.336
+bundle.version[com.liferay.poshi.runner]=1.0.337
 bundle.version[com.liferay.post.upgrade.fix.api]=4.0.0
 bundle.version[com.liferay.product.navigation.applications.menu.api]=2.0.8
 bundle.version[com.liferay.product.navigation.applications.menu.web.test]=1.0.0
@@ -1791,7 +1794,7 @@ bundle.version[com.liferay.redirect.web]=2.0.23
 bundle.version[com.liferay.region.service.test]=1.0.0
 bundle.version[com.liferay.release.feature.flag.api]=1.0.3
 bundle.version[com.liferay.release.feature.flag.web]=1.0.6
-bundle.version[com.liferay.remote.app.api]=8.0.1
+bundle.version[com.liferay.remote.app.api]=9.0.0
 bundle.version[com.liferay.remote.app.client.js]=1.0.8
 bundle.version[com.liferay.remote.app.service]=2.0.24
 bundle.version[com.liferay.remote.app.test]=1.0.0
@@ -1972,7 +1975,7 @@ bundle.version[com.liferay.social.group.statistics.web]=6.0.12
 bundle.version[com.liferay.social.requests.web]=5.0.11
 bundle.version[com.liferay.social.user.statistics.api]=5.0.5
 bundle.version[com.liferay.social.user.statistics.web]=7.0.12
-bundle.version[com.liferay.source.formatter]=1.0.1201
+bundle.version[com.liferay.source.formatter]=1.0.1203
 bundle.version[com.liferay.staging.api]=7.0.1
 bundle.version[com.liferay.staging.bar.web]=5.0.19
 bundle.version[com.liferay.staging.configuration.web]=5.0.17
@@ -2051,7 +2054,7 @@ bundle.version[com.liferay.users.admin.uad.test]=1.0.0
 bundle.version[com.liferay.users.admin.uad]=6.0.9
 bundle.version[com.liferay.users.admin.web]=6.0.37
 bundle.version[com.liferay.util.bridges]=9.0.6
-bundle.version[com.liferay.util.java]=16.0.1
+bundle.version[com.liferay.util.java]=17.0.1
 bundle.version[com.liferay.util.slf4j]=6.0.7
 bundle.version[com.liferay.util.taglib]=8.4.5
 bundle.version[com.liferay.view.count.api]=3.0.1
@@ -3187,6 +3190,7 @@ project.name[com.liferay.petra.doulos]=:apps:petra:petra-doulos
 project.name[com.liferay.petra.encryptor]=:apps:petra:petra-encryptor
 project.name[com.liferay.petra.executor]=:core:petra:petra-executor
 project.name[com.liferay.petra.function]=:core:petra:petra-function
+project.name[com.liferay.petra.http.invoker]=:apps:petra:petra-http-invoker
 project.name[com.liferay.petra.io.delta]=:apps:petra:petra-io-delta
 project.name[com.liferay.petra.io]=:core:petra:petra-io
 project.name[com.liferay.petra.json.validator]=:apps:petra:petra-json-validator
@@ -3514,6 +3518,8 @@ project.name[com.liferay.portal.template.soy.renderer.api]=:apps:portal-template
 project.name[com.liferay.portal.template.soy.renderer.impl]=:apps:portal-template:portal-template-soy-renderer-impl
 project.name[com.liferay.portal.template.test]=:apps:portal-template:portal-template-test
 project.name[com.liferay.portal.template.velocity]=:apps:portal-template:portal-template-velocity
+project.name[com.liferay.portal.tika.test]=:apps:portal:portal-tika-test
+project.name[com.liferay.portal.tika]=:apps:portal:portal-tika
 project.name[com.liferay.portal.tools.bundle.support]=:util:portal-tools-bundle-support
 project.name[com.liferay.portal.tools.data.partitioning.sql.builder.mysql]=:util:portal-tools-data-partitioning-sql-builder-mysql
 project.name[com.liferay.portal.tools.data.partitioning.sql.builder.postgresql]=:util:portal-tools-data-partitioning-sql-builder-postgresql
