LPS-146909 Add languages keys to objects view default sort

--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language.properties
@@ -4621,6 +4621,7 @@ default-segment-name=Anyone
 default-settings-for-all-instances=Default Settings for All Instances
 default-shipping=Default Shipping
 default-site-roles-assignment-help=Select the roles that the newly assigned site members will have.
+default-sort=Default Sort
 default-specification-group=Default Specification Group
 default-style-book=Default Style Book
 default-tab=Default Tab
@@ -5314,6 +5315,7 @@ edit-controls=Edit Controls
 edit-conversion-draft=Edit Conversion Draft
 edit-coupon=Edit Coupon
 edit-current-assignee=Edit Current Assignee
+edit-default-sort=Edit Default Sort
 edit-default-values=Edit Default Values
 edit-description=Edit Description
 edit-discount-rule=Edit Discount Rule
@@ -9745,6 +9747,7 @@ new-custom-field=New Custom Field
 new-custom-object=New Custom Object
 new-data-export=New Data Export
 new-data-source=New Data Source
+new-default-sort=New Default Sort
 new-definition=New Definition
 new-device-family=New Device Family
 new-digital-signature-envelope=New Digital Signature Envelope
@@ -9932,6 +9935,7 @@ no-data-migration-processes-are-available=No data migration processes are availa
 no-data-providers-were-found=No data providers were found.
 no-declined-invites=No declined invites.
 no-default-display-page-template=No Default Display Page Template
+no-default-sort-created-yet=No default sort created yet.
 no-definitions-were-found=No definitions were found.
 no-delivery-terms=No Delivery Terms
 no-description=No Description
@@ -14056,6 +14060,7 @@ sort-display-context-help=Access the data contained in the SortDisplayContext ob
 sort-portlet-instance-configuration-name=Sort
 sort-structures-by-name=Sort Structures by Name
 sort-structures-by-name-help=Set this to true to show structures sorted by ascending name when adding a web content. Otherwise, structures will be sorted by identifier. Enabling this property can degrade performance depending on number of existing ddmStructures since sorting is done in memory.
+sorting=Sorting
 sound-settings=Sound Settings
 source=Source
 source-address=Source Address
@@ -14197,6 +14202,7 @@ star-off=Star Off
 stars=Stars
 start=Start
 start-a-new-workflow=Start a New Workflow
+start-creating-a-sort-to-display-specific-data=Start creating a sort to display specific data.
 start-date=Start Date
 start-free-trial=Start Free Trial
 start-from=Start From
@@ -14975,6 +14981,7 @@ the-google-client-id-is-invalid=Please enter a valid Google client ID.
 the-google-client-secret-is-invalid=Please enter a valid Google client secret.
 the-google-places-api-key-is-not-set=The Google Places API key is not set.
 the-header-search-bar-configuration-takes-precedence=For disabled fields, the page header Search Bar configuration takes precedence.
+the-hierarchy-of-the-default-sorting-will-be-defined-by-the-vertical-order-of-the-fields-you-can-re-arrange-by-using-the-drag-and-drop=The hierarchy of the default sorting will be defined by the vertical order of the fields, you can re-arrange by using the drag and drop.
 the-id-is-based-on-the-name-field=The ID is based on the name field.
 the-id-you-entered-is-reserved-x=The ID you entered is reserved: {0}.
 the-identity-provider-role-has-been-disabled-it-can-be-re-enabled-in-system-settings=The identity provider role has been disabled. It can be re-enabled in System Settings.
@@ -15456,6 +15463,7 @@ there-are-no-collection-providers=There are no collection providers.
 there-are-no-collection-usages=There are no collection usages.
 there-are-no-collections=There are no collections.
 there-are-no-collections-yet=There are no collections yet.
+there-are-no-columns-added-in-this-view-yet=There are no columns added in this view yet.
 there-are-no-comments-yet=There are no comments yet.
 there-are-no-compatible-object-fields-to-map=There are no compatible object fields to map.
 there-are-no-completed-instances=There are no completed publication requests.
