LPS-147839 Add Management Toolbar to component names

--- a/test.properties
+++ b/test.properties
@@ -6564,6 +6564,7 @@
         Cadmin,\
         Clay,\
         Frontend Dataset,\
+        Management Toolbar,\
         Maps,\
         Remote Apps,\
         Theme,\
