LPS-147690 Only enable for master, Seiphon will revert when all violations are fixed on other branches

--- a/source-formatter.properties
+++ b/source-formatter.properties
@@ -790,6 +790,8 @@
         dl.char.blacklist,\
         jdbc.default.url
 
+    source.check.XMLEchoMessageCheck.enabled=true
+
     source.check.XMLServiceFileCheck.allowedMissingCompanyIdEntityNames=\
         AkismetEntry,\
         ClassName,\
