--- a/modules/dxp/apps/multi-factor-authentication/multi-factor-authentication-fido2-web/build.gradle
+++ b/modules/dxp/apps/multi-factor-authentication/multi-factor-authentication-fido2-web/build.gradle
@@ -1,14 +1,15 @@
 dependencies {
 	compileInclude group: "com.augustcellars.cose", name: "cose-java", version: "1.1.0"
-	compileInclude group: "com.fasterxml.jackson.dataformat", name: "jackson-dataformat-cbor", version: "2.11.2"
+	compileInclude group: "com.fasterxml.jackson.dataformat", name: "jackson-dataformat-cbor", version: "2.12.6"
 	compileInclude group: "com.fasterxml.jackson.datatype", name: "jackson-datatype-jdk8", version: "2.11.2"
 	compileInclude group: "com.github.peteroupc", name: "numbers", version: "1.7.4"
 	compileInclude group: "com.google.errorprone", name: "error_prone_annotations", version: "2.4.0"
 	compileInclude group: "com.google.guava", name: "failureaccess", version: "1.0.1"
 	compileInclude group: "com.google.guava", name: "guava", version: "30.1.1-jre"
 	compileInclude group: "com.upokecenter", name: "cbor", version: "4.5.2"
-	compileInclude group: "com.yubico", name: "webauthn-server-core", version: "1.6.4"
-	compileInclude group: "com.yubico", name: "yubico-util", version: "1.6.4"
+	compileInclude group: "com.yubico", name: "webauthn-server-core", version: "1.12.2"
+	compileInclude group: "com.yubico", name: "webauthn-server-core-minimal", version: "1.12.2"
+	compileInclude group: "com.yubico", name: "yubico-util", version: "1.12.2"
 	compileInclude group: "net.i2p.crypto", name: "eddsa", version: "0.3.0"
 	compileInclude group: "org.apache.httpcomponents", name: "httpclient", version: "4.5.13"
 	compileInclude group: "org.apache.httpcomponents", name: "httpcore", version: "4.4.14"
