LPS-148041 - Add custom-control-background-color style book token.

--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language.properties
@@ -18045,3 +18045,4 @@ zip-postal=Zip/Postal
 zoom-in=Zoom In
 zoom-out=Zoom Out
 zoom-to-fit=Zoom to Fit
+custom-control-background-color=Custom Control Background Color
