LPS-147683 Only enable for master, Simon will revert when all violations are fixed on other branches

--- a/source-formatter.properties
+++ b/source-formatter.properties
@@ -213,6 +213,8 @@
 
     checkstyle.EmptyConstructorCheck.enabled=true
 
+    checkstyle.ExceptionMapperAnnotationCheck.enabled=true
+
     checkstyle.FactoryCheck.enforceFactoryClassNames=\
         com.liferay.portal.kernel.service.permission.ModelPermissions:com.liferay.portal.kernel.service.permission.ModelPermissionsFactory
 
