LPS-147915 create _assertCommerceSpecificationsProducts in SiteInitializerTest

--- a/modules/apps/site-initializer/site-initializer-extender/site-initializer-extender-test/build.gradle
+++ b/modules/apps/site-initializer/site-initializer-extender/site-initializer-extender-test/build.gradle
@@ -13,6 +13,7 @@ dependencies {
 	testIntegrationCompile project(":apps:object:object-admin-rest-api")
 	testIntegrationCompile project(":apps:object:object-api")
 	testIntegrationCompile project(":apps:portal-security:portal-security-service-access-policy-api")
+	testIntegrationCompile project(":apps:commerce:headless:headless-commerce:headless-commerce-admin-catalog-api")
 	testIntegrationCompile project(":apps:portal-vulcan:portal-vulcan-api")
 	testIntegrationCompile project(":apps:remote-app:remote-app-api")
 	testIntegrationCompile project(":apps:site-initializer:site-initializer-extender:site-initializer-extender-test-bundle")
