--- a/modules/apps/site-initializer/site-initializer-testray/extra/remote-app/package.json
+++ b/modules/apps/site-initializer/site-initializer-testray/extra/remote-app/package.json
@@ -28,6 +28,7 @@
 		"@clayui/tabs": "^3.40.0",
 		"classnames": "^2.3.1",
 		"graphql": "^16.3.0",
+		"graphql-anywhere": "^4.2.7",
 		"history": "^5.2.0",
 		"react": "^17.0.2",
 		"react-dom": "^17.0.2",
