--- a/modules/apps/site-initializer/site-initializer-raylife/extra/remote-app/package.json
+++ b/modules/apps/site-initializer/site-initializer-raylife/extra/remote-app/package.json
@@ -17,6 +17,7 @@
 		]
 	},
 	"dependencies": {
+		"@clayui/core": "3.45.1",
 		"@googlemaps/js-api-loader": "^1.12.2",
 		"axios": "^0.22.0",
 		"react-hook-form": "^7.8.8",
