--- a/modules/apps/site-initializer/site-initializer-raylife/extra/remote-app/package.json
+++ b/modules/apps/site-initializer/site-initializer-raylife/extra/remote-app/package.json
@@ -17,9 +17,16 @@
 		]
 	},
 	"dependencies": {
+		"@clayui/card": "^3.41.0",
 		"@clayui/core": "3.45.1",
+		"@clayui/css": "3.33.1",
+		"@clayui/form": "^3.40.0",
+		"@clayui/icon": "3.32.0",
 		"@googlemaps/js-api-loader": "^1.12.2",
 		"axios": "^0.22.0",
+		"classnames": "2.3.1",
+		"react": "^17.0.2",
+		"react-dom": "17.0.2",
 		"react-hook-form": "^7.8.8",
 		"react-number-format": "^4.6.3",
 		"react-scripts": "4.0.3"
