LPS-146615 Add language key

--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language.properties
@@ -1551,6 +1551,7 @@ are-you-sure-you-want-to-deactivate-this-user=Are you sure you want to deactivat
 are-you-sure-you-want-to-deactivate-workflow=Are you sure you want to deactivate workflow?
 are-you-sure-you-want-to-delete-all-actions-and-their-settings=Are you sure you want to delete all actions and their settings?
 are-you-sure-you-want-to-delete-all-assignments-and-their-settings=Are you sure you want to delete all assignments and their settings?
+are-you-sure-you-want-to-delete-all-notifications-and-their-settings=Are you sure you want to delete all notifications and their settings?
 are-you-sure-you-want-to-delete-all-timers-and-their-settings=Are you sure you want to delete all timers and their settings?
 are-you-sure-you-want-to-delete-blueprints=Are you sure you want to delete selected blueprints?
 are-you-sure-you-want-to-delete-elements=Are you sure you want to delete selected elements?
@@ -4712,6 +4713,7 @@ delete-live-page=Delete live page.
 delete-missing-layouts=Delete Missing Pages
 delete-missing-layouts-help=If this option is chosen, all the pages in this site that are not present in the import LAR file are deleted.
 delete-missing-layouts-staging-help=If this option is chosen, all the pages in the live environment that are not present in the staging environment are deleted.
+delete-notifications=Delete Notifications
 delete-page=Delete Page
 delete-personal-data=Delete Personal Data
 delete-question=Delete question?
@@ -10154,6 +10156,7 @@ notification-recipients=Notification Recipients
 notification-template-type=Notification Template Type
 notification-templates=Notification Templates
 notification-type=Notification Type
+notification-types=Notification Types
 notification-was-deleted-successfully=Notification was deleted successfully.
 notification-was-marked-as-read-successfully=Notification was marked as read successfully.
 notification-was-marked-as-unread-successfully=Notification was marked as unread successfully.
@@ -10162,7 +10165,6 @@ notifications-body=Notifications Body
 notifications-email=Notifications Email
 notifications-list-x=Notifications List ({0})
 notifications-subject=Notifications Subject
-notifications-type=Notifications Type
 notifications-were-deleted-successfully=Notifications were deleted successfully.
 notifications-were-marked-as-read-successfully=Notifications were marked as read successfully.
 notifications-were-marked-as-unread-successfully=Notifications were marked as unread successfully.
