LPS-148015 - remove deprecate for "portal-impl/src/com/liferay/portlet/documentlibrary/util"

--- a/portal-impl/src/portal.properties
+++ b/portal-impl/src/portal.properties
@@ -7124,7 +7124,7 @@
     #
     # Env: LIFERAY_LOCK_PERIOD_LISTENERS
     #
-    #lock.listeners=com.liferay.portlet.documentlibrary.util.DLFileEntryLockListener
+    #lock.listeners=
 
     #
     # Set the lock expiration time for each class.
