--- a/modules/apps/commerce/commerce-checkout-web/build.gradle
+++ b/modules/apps/commerce/commerce-checkout-web/build.gradle
@@ -20,6 +20,7 @@ dependencies {
 	compileOnly project(":apps:commerce:commerce-pricing-api")
 	compileOnly project(":apps:commerce:commerce-product-api")
 	compileOnly project(":apps:commerce:commerce-shipping-engine-fixed-api")
+	compileOnly project(":apps:commerce:commerce-shipping-engine-fixed-service")
 	compileOnly project(":apps:commerce:commerce-taglib")
 	compileOnly project(":apps:commerce:commerce-term-api")
 	compileOnly project(":apps:commerce:headless:headless-commerce:headless-commerce-delivery-cart-api")
