--- a/modules/apps/site-initializer/site-initializer-testray/extra/remote-app/package.json
+++ b/modules/apps/site-initializer/site-initializer-testray/extra/remote-app/package.json
@@ -26,6 +26,7 @@
 		"@clayui/sticker": "^3.40.0",
 		"@clayui/table": "^3.40.0",
 		"@clayui/tabs": "^3.40.0",
+		"apollo-link-rest": "^0.9.0-rc.1",
 		"classnames": "^2.3.1",
 		"graphql": "^16.3.0",
 		"graphql-anywhere": "^4.2.7",
