--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language.properties
@@ -4554,7 +4554,6 @@ declined=Declined
 decorated=Decorated
 decoration=Decoration
 default=Default
-default-view-must-be-at-least-one-column=Default view must be at least one column.
 default-account-addresses=Default Account Addresses
 default-account-terms-and-conditions=Default Account Terms and Conditions
 default-associations=Default Associations
@@ -4627,7 +4626,7 @@ default-value-enabled=Default Value (Enabled)
 default-value-x=Default Value ({0})
 default-values=Default Values
 default-view=Default View
-default-view-must-be-at-least-one-column=Default view must be at least one column.
+default-view-must-have-at-least-one-column=Default view must have at least one column.
 default-viewport=Default Viewport
 default-was-changed=Default Was Changed
 default-workflow-for-all-document-types=Default Workflow for all Document Types
