LPS-143412 portal-language-lang: New language keys

--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language.properties
@@ -1,3 +1,7 @@
+the-blueprint-was-created-successfully=The blueprint was created successfully.
+the-blueprint-was-saved-successfully=The blueprint was saved successfully.
+the-element-was-created-successfully=The element was created successfully.
+the-element-was-saved-successfully=The element was saved successfully.
 +-add-address-line=+ Add Address Line
 0-analytics-cloud-connection=Analytics Cloud Connection
 1-account-was-added-to-x=1 account was added to {0}.
