COMMERCE-8370 - Add new lang key

--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language.properties
@@ -384,6 +384,7 @@ action.MANAGE_COMMERCE_ORDER_PAYMENT_METHODS=Manage Commerce Order Payment Metho
 action.MANAGE_COMMERCE_ORDER_PAYMENT_TERMS=Manage Order Payment Terms
 action.MANAGE_COMMERCE_ORDER_PRICES=Manage Order Prices
 action.MANAGE_COMMERCE_ORDER_RESTRICTED_NOTES=Manage Order Restricted Notes
+action.MANAGE_COMMERCE_ORDER_SHIPPING_OPTIONS=Manage Commerce Order Shipping Options
 action.MANAGE_COMMERCE_ORDERS=Manage Orders
 action.MANAGE_COMMERCE_PRICE_LISTS=Manage Price Lists
 action.MANAGE_COMMERCE_PRODUCT_ATTACHMENTS=Manage Attachments
