LPS-148020 Adding Navigation component to Testray component names

--- a/modules/apps/frontend-theme/test.properties
+++ b/modules/apps/frontend-theme/test.properties
@@ -17,7 +17,8 @@
         (portal.acceptance == true) AND \
         (\
             (testray.component.names == "Theme") OR \
-            (testray.component.names == "User Interface")\
+            (testray.component.names == "User Interface") OR \
+            (testray.component.names == "Navigation")\
         )
 
 ##
@@ -25,3 +26,4 @@
 ##
 
     testray.main.component.name=Theme
+    testray.main.component.name=Navigation
