--- a/modules/apps/frontend-theme/test.properties
+++ b/modules/apps/frontend-theme/test.properties
@@ -16,9 +16,9 @@
     test.batch.run.property.query[functional-tomcat*-mysql*-jdk8][relevant]=\
         (portal.acceptance == true) AND \
         (\
+            (testray.component.names == "Navigation") OR \
             (testray.component.names == "Theme") OR \
-            (testray.component.names == "User Interface") OR \
-            (testray.component.names == "Navigation")\
+            (testray.component.names == "User Interface")\
         )
 
 ##
