LPS-123587 Add title to buttons

--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language.properties
@@ -10455,6 +10455,7 @@ open-in-a-new-tab=Open in a new tab.
 open-in-ms-office=Open in MS Office
 open-menu=Open menu
 open-page-in-a-new-tab=Open Page in a New Tab
+open-page-options-menu=Open Page Options Menu
 open-page-template=Open Page Template
 open-pages=Open Pages
 open-private-pages=Open private pages
