COMMERCE-8551 Add new ci suite for executing integration tests across different databases

--- a/test.properties
+++ b/test.properties
@@ -2473,6 +2473,16 @@
         )
 
     #
+    # Commerce Database
+    #
+
+    test.batch.dist.app.servers[commerce-database]=tomcat
+
+    test.batch.names[commerce-database]=\
+        modules-integration-db2111-jdk8,\
+        modules-integration-oracle193-jdk8
+
+    #
     # Commerce Functional
     #
 
