LPS-147370 Update to enforce new patched version

--- a/modules/source-formatter.properties
+++ b/modules/source-formatter.properties
@@ -8,13 +8,13 @@
     checkstyle.PortletURLBuilderCheck.enforceBuilderNames=PortletURLBuilder
 
     source.check.GradleDependencyArtifactsCheck.enforceVersionArtifacts=\
-        biz.aQute.bnd:biz.aQute.bnd.annotation:4.2.0,\
         com.fasterxml.jackson-dataformat:jackson-dataformat-cbor:2.12.6,\
         com.fasterxml.jackson.core:jackson-annotations:2.12.4,\
         com.fasterxml.jackson.core:jackson-core:2.12.4,\
         com.fasterxml.jackson.core:jackson-databind:2.12.4,\
         com.github.virtuald:curvesapi:1.06,\
         com.google.guava:guava:30.1.1-jre,\
+        com.liferay:biz.aQute.bnd.annotation:4.2.0.LIFERAY-PATCHED-2,\
         com.liferay:biz.aQute.bndlib:4.2.0-20190219.175746-114-LIFERAY-CACHED.LIFERAY-PATCHED-1,\
         com.liferay:com.liferay.ant.bnd:3.2.8,\
         com.liferay:com.liferay.whip:1.0.3,\
@@ -109,7 +109,7 @@
         xml-apis:xml-apis:1.4.01
 
     source.check.GradleDependencyArtifactsCheck.renameArtifacts=\
-        com.liferay:biz.aQute.bnd.annotation->biz.aQute.bnd:biz.aQute.bnd.annotation,\
+        biz.aQute.bnd:biz.aQute.bnd.annotation->com.liferay:biz.aQute.bnd.annotation,\
         com.liferay:com.sun.syndication->com.rometools:rome,\
         com.liferay:javax.xml.bind->javax.xml.bind:jaxb-api,\
         com.sun.mail:javax.mail->com.sun.mail:jakarta.mail,\
