--- a/lib/development/dependencies.properties
+++ b/lib/development/dependencies.properties
@@ -33,6 +33,7 @@ jargs=net.sf:jargs:1.0
 jasper=org.apache.tomcat:tomcat-jasper:9.0.56
 jaxb-api=sun-jaxb:jaxb-api:2.1.9
 jbi_rt=net.open-esb.core:jbi_rt:2.4.3
+jhighlight=com.uwyn:jhighlight:1.0
 jndi=com.liferay:javax.naming.jndi:1.2.1
 jsch=com.jcraft:jsch:0.1.55
 jserrorcollector=net.jsourcerer.webdriver:JSErrorCollector:0.6-atlassian-3
