--- a/modules/util/source-formatter/source-formatter.properties
+++ b/modules/util/source-formatter/source-formatter.properties
@@ -29,3 +29,5 @@
 
     source.check.PropertiesLanguageKeysCheck.portalLanguagePropertiesFileName=\
         modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language.properties
+
+    source.check.XMLEchoMessageCheck.enabled=true
