ant update-portal-osgi-configuration-properties

--- a/portal-impl/src/portal-osgi-configuration.properties
+++ b/portal-impl/src/portal-osgi-configuration.properties
@@ -971,6 +971,10 @@
     #
     #configuration.override.com.liferay.commerce.configuration.CommerceOrderCheckoutConfiguration_guestCheckoutEnabled=
     #
+    # Env: LIFERAY_CONFIGURATION_PERIOD_OVERRIDE_PERIOD_COM_PERIOD_LIFERAY_PERIOD_COMMERCE_PERIOD_CONFIGURATION_PERIOD__UPPERCASEC_OMMERCE_UPPERCASEO_RDER_UPPERCASEC_HECKOUT_UPPERCASEC_ONFIGURATION_UNDERLINE_VIEW_UPPERCASED_ELIVERY_UPPERCASET_ERM_UPPERCASEC_HECKOUT_UPPERCASES_TEP_UPPERCASEE_NABLED
+    #
+    #configuration.override.com.liferay.commerce.configuration.CommerceOrderCheckoutConfiguration_viewDeliveryTermCheckoutStepEnabled=
+    #
     # Env: LIFERAY_CONFIGURATION_PERIOD_OVERRIDE_PERIOD_COM_PERIOD_LIFERAY_PERIOD_COMMERCE_PERIOD_CONFIGURATION_PERIOD__UPPERCASEC_OMMERCE_UPPERCASEO_RDER_UPPERCASEC_HECKOUT_UPPERCASEC_ONFIGURATION_UNDERLINE_VIEW_UPPERCASEP_AYMENT_UPPERCASET_ERM_UPPERCASEC_HECKOUT_UPPERCASES_TEP_UPPERCASEE_NABLED
     #
     #configuration.override.com.liferay.commerce.configuration.CommerceOrderCheckoutConfiguration_viewPaymentTermCheckoutStepEnabled=
@@ -1927,6 +1931,10 @@
     #
     #configuration.override.com.liferay.document.library.repository.cmis.configuration.CMISRepositoryConfiguration_deleteDepth=
     #
+    # Env: LIFERAY_CONFIGURATION_PERIOD_OVERRIDE_PERIOD_COM_PERIOD_LIFERAY_PERIOD_DOCUMENT_PERIOD_LIBRARY_PERIOD_INTERNAL_PERIOD_CONFIGURATION_PERIOD__UPPERCASEM_IME_UPPERCASET_YPE_UPPERCASES_IZE_UPPERCASEL_IMIT_UPPERCASEC_ONFIGURATION_UNDERLINE_CONTENT_UPPERCASET_YPE_UPPERCASES_IZE_UPPERCASEL_IMIT
+    #
+    #configuration.override.com.liferay.document.library.internal.configuration.MimeTypeSizeLimitConfiguration_contentTypeSizeLimit=
+    #
     # Env: LIFERAY_CONFIGURATION_PERIOD_OVERRIDE_PERIOD_COM_PERIOD_LIFERAY_PERIOD_DOCUMENT_PERIOD_LIBRARY_PERIOD_VIDEO_PERIOD_INTERNAL_PERIOD_CONFIGURATION_PERIOD__UPPERCASED__UPPERCASEL__UPPERCASEV_IDEO_UPPERCASEF__UPPERCASEF__UPPERCASEM__UPPERCASEP__UPPERCASEE__UPPERCASEG__UPPERCASEV_IDEO_UPPERCASEC_ONVERTER_UPPERCASEC_ONFIGURATION_UNDERLINE_ENABLED
     #
     #configuration.override.com.liferay.document.library.video.internal.configuration.DLVideoFFMPEGVideoConverterConfiguration_enabled=
@@ -2230,6 +2238,10 @@
     # Env: LIFERAY_CONFIGURATION_PERIOD_OVERRIDE_PERIOD_COM_PERIOD_LIFERAY_PERIOD_FRONTEND_PERIOD_THEME_PERIOD_FONT_PERIOD_AWESOME_PERIOD_WEB_PERIOD_INTERNAL_PERIOD_CONFIGURATION_PERIOD__UPPERCASEC__UPPERCASES__UPPERCASES__UPPERCASEF_ONT_UPPERCASEA_WESOME_UPPERCASEC_ONFIGURATION_UNDERLINE_ENABLE_UPPERCASEF_ONT_UPPERCASEA_WESOME
     #
     #configuration.override.com.liferay.frontend.theme.font.awesome.web.internal.configuration.CSSFontAwesomeConfiguration_enableFontAwesome=
+    #
+    # Env: LIFERAY_CONFIGURATION_PERIOD_OVERRIDE_PERIOD_COM_PERIOD_LIFERAY_PERIOD_HEADLESS_PERIOD_ADMIN_PERIOD_LIST_PERIOD_TYPE_PERIOD_INTERNAL_PERIOD_CONFIGURATION_PERIOD__UPPERCASEF__UPPERCASEF__UPPERCASEL_IST_UPPERCASET_YPE_UPPERCASED_EFINITION_UPPERCASEP_ERMISSIONS_UPPERCASEA_CTION_UPPERCASEC_ONFIGURATION_UNDERLINE_ENABLED
+    #
+    #configuration.override.com.liferay.headless.admin.list.type.internal.configuration.FFListTypeDefinitionPermissionsActionConfiguration_enabled=
     #
     # Env: LIFERAY_CONFIGURATION_PERIOD_OVERRIDE_PERIOD_COM_PERIOD_LIFERAY_PERIOD_HEADLESS_PERIOD_DISCOVERY_PERIOD_INTERNAL_PERIOD_CONFIGURATION_PERIOD__UPPERCASEH_EADLESS_UPPERCASED_ISCOVERY_UPPERCASEC_ONFIGURATION_UNDERLINE_ENABLE_UPPERCASEA__UPPERCASEP__UPPERCASEI__UPPERCASEE_XPLORER
     #
@@ -3007,10 +3019,6 @@
     #
     #configuration.override.com.liferay.layout.configuration.LayoutExportImportConfiguration_exportDraftLayout=
     #
-    # Env: LIFERAY_CONFIGURATION_PERIOD_OVERRIDE_PERIOD_COM_PERIOD_LIFERAY_PERIOD_LAYOUT_PERIOD_CONTENT_PERIOD_PAGE_PERIOD_EDITOR_PERIOD_WEB_PERIOD_INTERNAL_PERIOD_CONFIGURATION_PERIOD__UPPERCASEF__UPPERCASEF__UPPERCASEL_AYOUT_UPPERCASEC_ONTENT_UPPERCASEP_AGE_UPPERCASEE_DITOR_UPPERCASEC_ONFIGURATION_UNDERLINE_TOKEN_UPPERCASER_EUSE_UPPERCASEE_NABLED
-    #
-    #configuration.override.com.liferay.layout.content.page.editor.web.internal.configuration.FFLayoutContentPageEditorConfiguration_tokenReuseEnabled=
-    #
     # Env: LIFERAY_CONFIGURATION_PERIOD_OVERRIDE_PERIOD_COM_PERIOD_LIFERAY_PERIOD_LAYOUT_PERIOD_CONTENT_PERIOD_PAGE_PERIOD_EDITOR_PERIOD_WEB_PERIOD_INTERNAL_PERIOD_CONFIGURATION_PERIOD__UPPERCASEF__UPPERCASEF__UPPERCASEL_AYOUT_UPPERCASEC_ONTENT_UPPERCASEP_AGE_UPPERCASEE_DITOR_UPPERCASEC_ONFIGURATION_UNDERLINE_PAGINATION_UPPERCASEI_MPROVEMENTS_UPPERCASEE_NABLED
     #
     #configuration.override.com.liferay.layout.content.page.editor.web.internal.configuration.FFLayoutContentPageEditorConfiguration_paginationImprovementsEnabled=
@@ -3267,13 +3275,17 @@
     #
     #configuration.override.com.liferay.oauth2.provider.scope.internal.configuration.ScopeLocatorConfiguration_includeScopesImpliedBeforeScopeMapping=
     #
+    # Env: LIFERAY_CONFIGURATION_PERIOD_OVERRIDE_PERIOD_COM_PERIOD_LIFERAY_PERIOD_OBJECT_PERIOD_ADMIN_PERIOD_REST_PERIOD_INTERNAL_PERIOD_CONFIGURATION_PERIOD__UPPERCASEF__UPPERCASEF__UPPERCASEO_BJECT_UPPERCASED_EFINITION_UPPERCASEP_ERMISSIONS_UPPERCASEA_CTION_UPPERCASEC_ONFIGURATION_UNDERLINE_ENABLED
+    #
+    #configuration.override.com.liferay.object.admin.rest.internal.configuration.FFObjectDefinitionPermissionsActionConfiguration_enabled=
+    #
+    # Env: LIFERAY_CONFIGURATION_PERIOD_OVERRIDE_PERIOD_COM_PERIOD_LIFERAY_PERIOD_OBJECT_PERIOD_CONFIGURATION_PERIOD__UPPERCASEF__UPPERCASEF__UPPERCASEG_UEST_UPPERCASER_ESOURCE_UPPERCASEP_ERMISSION_UPPERCASEC_ONFIGURATION_UNDERLINE_ENABLED
+    #
+    #configuration.override.com.liferay.object.configuration.FFGuestResourcePermissionConfiguration_enabled=
+    #
     # Env: LIFERAY_CONFIGURATION_PERIOD_OVERRIDE_PERIOD_COM_PERIOD_LIFERAY_PERIOD_OBJECT_PERIOD_WEB_PERIOD_INTERNAL_PERIOD_CONFIGURATION_PERIOD__UPPERCASEF__UPPERCASEF__UPPERCASEB_USINESS_UPPERCASET_YPE_UPPERCASEA_TTACHMENT_UPPERCASEC_ONFIGURATION_UNDERLINE_ENABLED
     #
     #configuration.override.com.liferay.object.web.internal.configuration.FFBusinessTypeAttachmentConfiguration_enabled=
-    #
-    # Env: LIFERAY_CONFIGURATION_PERIOD_OVERRIDE_PERIOD_COM_PERIOD_LIFERAY_PERIOD_OBJECT_PERIOD_WEB_PERIOD_INTERNAL_PERIOD_CONFIGURATION_PERIOD__UPPERCASEF__UPPERCASEF__UPPERCASEO_BJECT_UPPERCASEF_IELD_UPPERCASEB_USINESS_UPPERCASET_YPE_UPPERCASEC_ONFIGURATION_UNDERLINE_ENABLED
-    #
-    #configuration.override.com.liferay.object.web.internal.configuration.FFObjectFieldBusinessTypeConfiguration_enabled=
     #
     # Env: LIFERAY_CONFIGURATION_PERIOD_OVERRIDE_PERIOD_COM_PERIOD_LIFERAY_PERIOD_OBJECT_PERIOD_WEB_PERIOD_INTERNAL_PERIOD_CONFIGURATION_PERIOD__UPPERCASEF__UPPERCASEF__UPPERCASEO_NE_UPPERCASET_O_UPPERCASEO_NE_UPPERCASER_ELATIONSHIP_UPPERCASEC_ONFIGURATION_UNDERLINE_ENABLED
     #
