COMMERCE-8388 portal-language-lang new header title

--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language.properties
@@ -4562,6 +4562,7 @@ decorated=Decorated
 decoration=Decoration
 default=Default
 default-account-addresses=Default Account Addresses
+default-account-commerce-payment-methods=Default Account Commerce Payment Methods
 default-account-terms-and-conditions=Default Account Terms and Conditions
 default-associations=Default Associations
 default-bearer-token-provider-configuration-name=Default BearerTokenProvider
@@ -13423,6 +13424,7 @@ set-background-image-properties=Set Background Image Properties
 set-base-path-for-history-router=Set Base Path for History Router
 set-default-address=Set Default Address
 set-default-billing-address=Set Default Billing Address
+set-default-commerce-payment-method=Set Default Commerce Payment Method
 set-default-delivery-commerce-term-entry=Set Default Delivery Commerce Term Entry
 set-default-payment-commerce-term-entry=Set Default Payment Commerce Term Entry
 set-default-shipping-address=Set Default Shipping Address
