LPS-145235 Add custom logging to functional tests to assert the log context

--- a/test.properties
+++ b/test.properties
@@ -6111,6 +6111,7 @@
         liferay.online.properties,\
         liferay.online.smoke,\
         liferay.training.dependency.jars,\
+        log.context.enabled,\
         marketplace.app.acceptance,\
         marketplace.staging.enabled,\
         minimum.slave.ram,\
