--- a/test.properties
+++ b/test.properties
@@ -5270,8 +5270,8 @@
     test.batch.run.property.query[functional-tomcat90-mysql57-jdk8][security]=\
         (portal.upstream == true) AND \
         (\
+            (testray.main.component.name == "Audit") OR \
             (testray.main.component.name ~ "AntiSamy") OR \
-            (testray.main.component.name ~ "Audit") OR \
             (testray.main.component.name ~ "CAPTCHA") OR \
             (testray.main.component.name ~ "LDAP") OR \
             (testray.main.component.name ~ "Login") OR \
