LPS-148049 Only enable for master

--- a/source-formatter.properties
+++ b/source-formatter.properties
@@ -548,6 +548,8 @@
 
     source.check.JavaVariableTypeCheck.checkVolatileFields=true
 
+    source.check.JSONPackageJSONRedundantDependenciesCheck.enabled=true
+
     source.check.JSPArrowFunctionCheck.enabled=false
 
     source.check.JSPLanguageKeysCheck.portalLanguagePropertiesFileName=\
