LPS-148049 Add logic to exclude exceptional directories

--- a/source-formatter.properties
+++ b/source-formatter.properties
@@ -550,6 +550,13 @@
 
     source.check.JSONPackageJSONRedundantDependenciesCheck.enabled=true
 
+    source.check.JSONPackageJSONRedundantDependenciesCheck.excludedDirNames=\
+        modules/apps/frontend-,\
+        modules/apps/site-initializer/site-initializer-raylife,\
+        modules/apps/site-initializer/site-initializer-testray,\
+        modules/dxp/apps/osb/osb-site-initializer/osb-site-initializer-customer-portal,\
+        modules/sdk
+
     source.check.JSPArrowFunctionCheck.enabled=false
 
     source.check.JSPLanguageKeysCheck.portalLanguagePropertiesFileName=\
