COMMERCE-8546 Added missing forward slash

--- a/modules/apps/commerce/headless/headless-commerce/headless-commerce-admin-shipment-impl/rest-openapi.yaml
+++ b/modules/apps/commerce/headless/headless-commerce/headless-commerce-admin-shipment-impl/rest-openapi.yaml
@@ -1408,7 +1408,7 @@ paths:
                                 $ref: "#/components/schemas/Shipment"
             tags:
                 - Shipment
-    /shipments/by-externalReferenceCode/{externalReferenceCode}status-shipped:
+    /shipments/by-externalReferenceCode/{externalReferenceCode}/status-shipped:
         post:
             operationId: postShipmentByExternalReferenceCodeStatusShipped
             parameters:
